--- a/_config.yml
+++ b/_config.yml
@@ -54,4 +54,4 @@ plugins: [jekyll-paginate, jekyll-seo-tag, jekyll-feed]
 exclude: [".jekyll-cache", ".jekyll-metadata", ".idea", "vendor/*", "assets/node_modules/*"]
 
 # theme: type-on-strap                                  # if using the theme as a jekyll theme gem
-remote_theme: bibaf/Type-on-Strap                     # If using as a remote_theme in github
+#remote_theme: bibaf/Type-on-Strap                     # If using as a remote_theme in github
