--- a/_config.yml
+++ b/_config.yml
@@ -38,14 +38,14 @@ comments:
     issue-term:                                         # Issue term (e.g. "comment" consider issues with this word in the title as comments)
 
 # PAGINATION
-paginate: 10
-paginate_path: "/blog/page:num"
+#paginate: 10
+#paginate_path: "/blog/page:num"
 
 # PORTFOLIO
-collections:
-  portfolio:
-    output: true
-    permalink: /:collection/:name
+#collections:
+#  portfolio:
+#    output: true
+#   permalink: /:collection/:name
 
 # BUILD SETTINGS
 sass:
