added soc networks

--- a/_data/icons.yml
+++ b/_data/icons.yml
@@ -6,14 +6,14 @@ calendly:
 dribbble:
 facebook:
 flickr:
-github: sylhare
+github: bibaf
 gitlab:
 google-scholar:   # e.g. "WXAAOb0AAAAJ"
 instagram:
 hacker-news:
 keybase:
-linkedin:
-mail:             # e.g. "sam@mail.com"
+linkedin: https://www.linkedin.com/in/zvi-fux/
+mail: zvi.fux1@gmail.com           # e.g. "sam@mail.com"
 map:              # e.g. "34.0886/-118.3191"
 mastodon:         # e.g. "fostodon.org/@sam"
 matrix:           # e.g. "@sam:matrix.org"
@@ -30,7 +30,7 @@ steam:
 telegram:
 tumblr:
 twitch:
-twitter:
+twitter: https://twitter.com/FuxZvi
 vimeo:
 vk:
 wordpress:
