fix broken links

--- a/_data/icons.yml
+++ b/_data/icons.yml
@@ -12,7 +12,7 @@ google-scholar:   # e.g. "WXAAOb0AAAAJ"
 instagram:
 hacker-news:
 keybase:
-linkedin: https://www.linkedin.com/in/zvi-fux/
+linkedin: zvi-fux
 mail: zvi.fux1@gmail.com           # e.g. "sam@mail.com"
 map:              # e.g. "34.0886/-118.3191"
 mastodon:         # e.g. "fostodon.org/@sam"
@@ -30,7 +30,7 @@ steam:
 telegram:
 tumblr:
 twitch:
-twitter: https://twitter.com/FuxZvi
+twitter: FuxZvi
 vimeo:
 vk:
 wordpress:
